fixtures/parser/invalid/expressions_basic_invalid.php
<?php
// invalid: expressions are missing operands
echo (1 + ;
echo 2 ** ;
